try to fix timeline hidden on mobile

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+#root {
+    height: 100vh;
+    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
+    overflow: hidden;
+}
+
 div {
     &::-webkit-scrollbar {
         width: 8px;
